added turnkey solutions page

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
   <script defer src="/app/js/detect-location.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
 
-  <title>Digital Shovel - Contact Us</title>
+  <title>Digital Shovel • Contact Us</title>
 </head>
 
 <body>
