--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
 
-  <title>Digital Shovel - Home</title>
+  <title>Digital Shovel</title>
 </head>
 
 <body>
