--- a/minipod.html
+++ b/minipod.html
@@ -29,7 +29,7 @@
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
 
-  <title>Digital Shovel - Minipod</title>
+  <title>Digital Shovel • Minipod</title>
 </head>
 
 <body>
@@ -337,7 +337,7 @@
 
     </section>
 
-    <section id="specifications" class="card-grid">
+    <section id="specifications" class="card__grid">
       <div class="card-1 flex flex-col gap--md">
         <div class="flex gap--sm ai-c">
           <img class="icon--md" src="images/icons/icon_power.svg" alt="Power Input Icon">
