--- a/turnkey-solutions.html
+++ b/turnkey-solutions.html
@@ -9,7 +9,7 @@
     content="Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy cost, and high security, we help businesses with managed and unmanaged miner hosting.">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="../dist/style.min.css?v=1.1">
+  <link rel="stylesheet" href="../dist/style.min.css?v=1.1.5">
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
@@ -27,9 +27,10 @@
   <script defer src="/app/js/contact.js"></script>
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
+  <script defer src="/app/js/detect-location.js"></script>
 
 
-  <title>Digital Shovel • Contact Us</title>
+  <title>Digital Shovel • Turn-key Solutions</title>
 </head>
 
 <body>
@@ -112,24 +113,103 @@
     </div>
   </nav>
 
-  <main class="main">
+  <main class="main turnkey container">
 
-    <section class="hero container flex jc-sb">
-      <div class="hero__text flex flex-col gap--lg">
-        <h1>
-          Thank <emphasis class="text--blue">you!</emphasis>
-        </h1>
-        <div class="flex flex-col gap--sm">
-          <h3>We have received your message!</h3>
-          <p class="hero__body hero__body--team">
-            Our team will go through the details of your message and get back to you as soon as possible.
-          </p>
+    <section class="hero flex flex-col">
+      <div class="hero__turnkey">
+        <h1>TURN-KEY SOLUTIONS</h1>
+        <p>Our turn-key solutions are designed to make your life easier by providing a comprehensive and efficient
+          solution to your business needs. From start to finish, we'll handle all the details, so you can focus on what
+          you do best.
+        </p>
+      </div>
+      <div class="flex jc-sb">
+        <div class="turnkey__mining">
+          <h2>Start mining in</h2>
+          <h3>30 days</h3>
+          <h2>fully turn-key and managed</h4>
+        </div>
+        <div class="turnkey__watt-price">
+          <img src="images/icons/icon_coin.svg" alt="Dollar Coin">
+          <div class="flex flex-col">
+            <span>Pricing based on volume</span>
+            <h4>6.5¢ - 7.5¢ <small>/ kWh</small></h4>
+          </div>
         </div>
       </div>
+    </section>
 
-      <div class="hero__img">
-        <img src="images/illustrations/contact-chat-bubbles.svg" alt="Chat Bubble Icons">
+    <section class="turnkey__grid">
+      <div class="turnkey__grid-item">
+        <img src="images/icons/icon_land-lease.svg" alt="Land Lease Icon">
+        <h5>Land Lease</h5>
+        <p>Lorem ipsum dolor sit amet consectetur. Tempus dignissim feugiat tortor aliquet. Ac porta interdum vitae
+          scelerisque nunc morbi.</p>
       </div>
+      <div class="turnkey__grid-item">
+        <img src="images/icons/icon_transformer-hookup.svg" alt="Transformer Hookup Icon">
+        <h5>Transformer Hookup</h5>
+        <p>Lorem ipsum dolor sit amet consectetur. Tempus dignissim feugiat tortor aliquet. Ac porta interdum vitae
+          scelerisque nunc morbi.</p>
+      </div>
+      <div class="turnkey__grid-item">
+        <img src="images/icons/icon_pad.svg" alt="Pad Icon">
+        <h5>Pad</h5>
+        <p>Lorem ipsum dolor sit amet consectetur. Tempus dignissim feugiat tortor aliquet. Ac porta interdum vitae
+          scelerisque nunc morbi.</p>
+      </div>
+      <div class="turnkey__grid-item">
+        <img src="images/icons/icon_forklift.svg" alt="Forklift Icon">
+        <h5>Forklift</h5>
+        <p>Lorem ipsum dolor sit amet consectetur. Tempus dignissim feugiat tortor aliquet. Ac porta interdum vitae
+          scelerisque nunc morbi.</p>
+      </div>
+      <div class="turnkey__grid-item">
+        <img src="images/icons/icon_truck.svg" alt="Truck Icon">
+        <h5>Truck</h5>
+        <p>Lorem ipsum dolor sit amet consectetur. Tempus dignissim feugiat tortor aliquet. Ac porta interdum vitae
+          scelerisque nunc morbi.</p>
+      </div>
+      <div class="turnkey__grid-item">
+        <img src="images/icons/icon_pod.svg" alt="Minipod Icon">
+        <h5>Minipod</h5>
+        <p>Lorem ipsum dolor sit amet consectetur. Tempus dignissim feugiat tortor aliquet. Ac porta interdum vitae
+          scelerisque nunc morbi.</p>
+      </div>
+    </section>
+
+    <section class="turnkey__pricing">
+      <div class="flex jc-sb ai-c gap--xlg">
+        <div class="flex flex-col">
+          <h5>Power Deposit</h5>
+          <h2 class="flex ai-end gap--sm">$42k
+            <small class="text--dark-blue">/pod</small>
+          </h2>
+        </div>
+        <h2>+</h2>
+        <div class="flex flex-col">
+          <h5>Pod Deposit</h5>
+          <h2 class="flex ai-end gap--sm">$23k
+            <span class="flex flex-col gap--sm">
+              <small class="text--emphasis text--blue">+$2300/m</small>
+              <small class="text--dark-blue">for 12 months</small>
+            </span>
+          </h2>
+        </div>
+      </div>
+    </section>
+
+    <section class="turnkey__cta flex flex-col ai-c">
+      <a class="btn btn--primary" href="contact">Get Started
+        <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path d="M7.49 6L7.5 6" />
+          <path d="M2.5 1L7.95455 6L2.5 11" />
+        </svg>
+      </a>
+
+      <h3>You own the pods at the end</h3>
+      <h4>*2 Year Minimum Commitment & Only 5MW Available</h4>
     </section>
 
   </main>
