--- a/voskcoin.html
+++ b/voskcoin.html
@@ -30,7 +30,7 @@
   <script defer src="/app/js/detect-location.js"></script>
 
 
-  <title>Digital Shovel - VoskCoin</title>
+  <title>Digital Shovel • VoskCoin</title>
 </head>
 
 <body>
@@ -117,8 +117,7 @@
 
     <section class="hero hero__partnership container flex flex-col jc-sb">
       <h1>Partnership</h1>
-      <div class="hero__image">
-        <img src="images/illustrations/ds-X-vosk.svg" alt="Partnership Digital Shovel X VoskCoin" />
+      <img src="images/illustrations/ds-X-vosk.svg" alt="Partnership Digital Shovel X VoskCoin" />
     </section>
 
     <section class="promotion flex flex-col-mobile jc-sb gap--xxlg">
