--- a/turnkey-solutions.html
+++ b/turnkey-solutions.html
@@ -5,8 +5,21 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Search engine optimization -->
+  <meta name="author" content="Digital Shovel">
   <meta name="description"
     content="Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy cost, and high security, we help businesses with managed and unmanaged miner hosting.">
+
+  <!-- Social media tags -->
+  <meta property="og:title" content="Digital Shovel • Turn-Key Solutions">
+  <meta property="og:description"
+    content="Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy cost, and high security, we help businesses with managed and unmanaged miner hosting.">
+  <meta property="og:image" content="/images/backgrounds/meta-image.jpg">
+  <meta property="og:url" content="/turnkey-solutions.html">
+  <meta property="og:site_name" content="Digital Shovel">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image:alt" content="Digital Shovel Logo">
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="../dist/style.min.css?v=1.1.5">
@@ -30,7 +43,7 @@
   <script defer src="/app/js/detect-location.js"></script>
 
 
-  <title>Digital Shovel • Turn-key Solutions</title>
+  <title>Digital Shovel • Turn-Key Solutions</title>
 </head>
 
 <body>
@@ -106,6 +119,10 @@
             </a>
           </div>
         </li>
+
+        <li>
+          <a class="navbar__link" href="turnkey-solutions">Turn-Key Solutions</a>
+        </li>
         <li>
           <a class="navbar__link" href="contact">Contact Us</a>
         </li>
@@ -116,14 +133,14 @@
   <main class="main turnkey container">
 
     <section class="hero flex flex-col">
-      <div class="hero__turnkey">
+      <div class="turnkey__header flex flex-col gap--sm">
         <h1>TURN-KEY SOLUTIONS</h1>
         <p>Our turn-key solutions are designed to make your life easier by providing a comprehensive and efficient
           solution to your business needs. From start to finish, we'll handle all the details, so you can focus on what
           you do best.
         </p>
       </div>
-      <div class="flex jc-sb">
+      <div class="flex flex-col-mobile jc-sb gap--lg">
         <div class="turnkey__mining">
           <h2>Start mining in</h2>
           <h3>30 days</h3>
@@ -178,24 +195,22 @@
       </div>
     </section>
 
-    <section class="turnkey__pricing">
-      <div class="flex jc-sb ai-c gap--xlg">
-        <div class="flex flex-col">
-          <h5>Power Deposit</h5>
-          <h2 class="flex ai-end gap--sm">$42k
-            <small class="text--dark-blue">/pod</small>
-          </h2>
-        </div>
-        <h2>+</h2>
-        <div class="flex flex-col">
-          <h5>Pod Deposit</h5>
-          <h2 class="flex ai-end gap--sm">$23k
-            <span class="flex flex-col gap--sm">
-              <small class="text--emphasis text--blue">+$2300/m</small>
-              <small class="text--dark-blue">for 12 months</small>
-            </span>
-          </h2>
-        </div>
+    <section class="turnkey__pricing flex flex-col-mobile jc-sb ai-c gap--xlg">
+      <div class="flex flex-col">
+        <h5>Power Deposit</h5>
+        <h2 class="flex ai-end gap--sm">$42k
+          <small class="text--dark-blue">/pod</small>
+        </h2>
+      </div>
+      <h2>+</h2>
+      <div class="flex flex-col">
+        <h5>Pod Deposit</h5>
+        <h2 class="flex ai-end gap--sm">$23k
+          <span class="flex flex-col gap--sm">
+            <small class="text--emphasis text--blue">+$2300/m</small>
+            <small class="text--dark-blue">for 12 months</small>
+          </span>
+        </h2>
       </div>
     </section>
 
