--- a/minipod.html
+++ b/minipod.html
@@ -5,8 +5,22 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Search engine optimization -->
+  <meta name="author" content="Digital Shovel">
   <meta name="description"
     content="Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy cost, and high security, we help businesses with managed and unmanaged miner hosting.">
+
+  <!-- Social media tags -->
+  <meta property="og:title" content="Digital Shovel • Minipod">
+  <meta property="og:description"
+    content="Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy cost, and high security, we help businesses with managed and unmanaged miner hosting.">
+  <meta property="og:image" content="/images/backgrounds/meta-image.jpg">
+  <meta property="og:url" content="/minipod.html">
+  <meta property="og:site_name" content="Digital Shovel">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image:alt" content="Digital Shovel Logo">
+
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="../dist/style.min.css?v=1.1">
