--- a/voskcoin.html
+++ b/voskcoin.html
@@ -22,7 +22,7 @@
   <meta name="twitter:image:alt" content="Digital Shovel Logo">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="../dist/style.min.css?v=1.1.5">
+  <link rel="stylesheet" href="../dist/style.min.css?v=1.2">
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
@@ -118,6 +118,10 @@
               </div>
             </a>
           </div>
+        </li>
+
+        <li>
+          <a class="navbar__link" href="turnkey-solutions">Turn-Key Solutions</a>
         </li>
         <li>
           <a class="navbar__link" href="contact">Contact Us</a>
