--- a/minipod.html
+++ b/minipod.html
@@ -23,7 +23,7 @@
 
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="../dist/style.min.css?v=1.1">
+  <link rel="stylesheet" href="../dist/style.min.css?v=1.2">
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
@@ -118,6 +118,10 @@
               </div>
             </a>
           </div>
+        </li>
+
+        <li>
+          <a class="navbar__link" href="turnkey-solutions">Turn-Key Solutions</a>
         </li>
         <li>
           <a class="navbar__link" href="contact">Contact Us</a>
