added turnkey solutions to footer

--- a/minipod.html
+++ b/minipod.html
@@ -627,6 +627,7 @@
           <small class="footer__heading">Navigation</small>
           <ul class="footer__list">
             <li><a href="minipod" class="footer__list-item">Products</a></li>
+            <li><a href="turnkey-solutions" class="footer__list-item">Turn-Key Solutions</a></li>
             <li><a href="contact" class="footer__list-item">Contact</a></li>
           </ul>
         </div>
