--- a/turnkey-solutions.html
+++ b/turnkey-solutions.html
@@ -42,8 +42,19 @@
   <script defer src="/app/js/dropdown.js"></script>
   <script defer src="/app/js/detect-location.js"></script>
 
-
   <title>Digital Shovel • Turn-Key Solutions</title>
+
+  <!-- Hotjar Tracking Code for https://digitalshovel.com/ -->
+  <script>
+    (function (h, o, t, j, a, r) {
+      h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+      h._hjSettings = { hjid: 3324634, hjsv: 6 };
+      a = o.getElementsByTagName('head')[0];
+      r = o.createElement('script'); r.async = 1;
+      r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+      a.appendChild(r);
+    })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+  </script>
 </head>
 
 <body>
