added interactions and animations to turnkey page

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
     </section>
 
     <section class="testimonials">
-      <div class="container--sm flex gap--md ai-end">
+      <div class="container container--sm flex gap--md ai-end">
         <svg class="testimonials__icon" width="88" height="81" viewBox="0 0 88 81" fill="none"
           xmlns="http://www.w3.org/2000/svg">
           <g class="testimonials__chat-bubble">
