fixed socials and hid turnkey page

--- a/minipod.html
+++ b/minipod.html
@@ -132,9 +132,9 @@
           </div>
         </li>
 
-        <li>
+        <!-- <li>
           <a class="navbar__link" href="turnkey-solutions">Turn-Key Solutions</a>
-        </li>
+        </li> -->
         <li>
           <a class="navbar__link" href="contact">Contact Us</a>
         </li>
@@ -639,7 +639,7 @@
           <small class="footer__heading">Navigation</small>
           <ul class="footer__list">
             <li><a href="minipod" class="footer__list-item">Products</a></li>
-            <li><a href="turnkey-solutions" class="footer__list-item">Turn-Key Solutions</a></li>
+            <!-- <li><a href="turnkey-solutions" class="footer__list-item">Turn-Key Solutions</a></li> -->
             <li><a href="contact" class="footer__list-item">Contact</a></li>
           </ul>
         </div>
@@ -650,8 +650,10 @@
           <small class="footer__copyright">© 2023 Digital Shovel Holdings Inc.</small>
         </div>
         <div class="flex gap--sm ai-c">
-          <img class="footer__social" src="images/icons/icon_facebook.svg" alt="Facebook Logo Icon">
-          <img class="footer__social" src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon">
+          <a target="_blank" href="https://www.instagram.com/digital_shovel/"><img class="footer__social"
+              src="images/icons/icon_instagram.svg" alt="Facebook Logo Icon"></a>
+          <a target="_blank" href="https://twitter.com/Digital_Shovel"><img class="footer__social"
+              src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon"></a>
         </div>
       </div>
     </div>
