--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             Discover our continued innovation, competitive pricing, and what really sets us apart by exploring our
             offering. </p>
           <div class="flex gap--sm">
-            <a class="btn btn--primary" href="contact">Products
+            <a class="btn btn--primary" href="minipod">Products
               <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path d="M7.49 6L7.5 6" />
@@ -360,7 +360,7 @@
           <img src="images/illustrations/minipod-back_with-text.svg" alt="Minipod Illustration Back Side">
           <div class="minipod__illustrations--shadow"></div>
         </div>
-        <a href="contact" class="btn btn--primary btn--as-c">Minipod Info
+        <a href="minipod" class="btn btn--primary btn--as-c">Minipod Info
           <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path d="M7.49 6L7.5 6" stroke="var(--blue-50)" stroke-width="2" stroke-linecap="round"
@@ -388,7 +388,7 @@
                 Unit (SPDU)
               </span> that comes along with it. The SPDU and its user interface give you the power to control numerous
               pricing to customize your Minipod and miners.</p>
-            <a href="contact" class="btn btn--primary btn--white">Products <svg class="btn__chevron" width="13"
+            <a href="minipod" class="btn btn--primary btn--white">Products <svg class="btn__chevron" width="13"
                 height="12" viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7.49 6L7.5 6" />
                 <path d="M2.5 1L7.95455 6L2.5 11" />
@@ -414,7 +414,7 @@
                 data</span> for you to monitor every event that
               occurs. Determine the time period you want to analyze and never miss anything.
             </p>
-            <a href="contact" class="btn btn--primary">Products <svg class="btn__chevron" width="13" height="12"
+            <a href="minipod" class="btn btn--primary">Products <svg class="btn__chevron" width="13" height="12"
                 viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7.49 6L7.5 6" />
                 <path d="M2.5 1L7.95455 6L2.5 11" />
@@ -439,7 +439,7 @@
               that occurs with your Minipod and your miners. <span class="text--emphasis text--light-blue">Receive
                 simple and clear emails</span> when such events happen.
             </p>
-            <a href="contact" class="btn btn--primary btn--white">Products <svg class="btn__chevron" width="13"
+            <a href="minipod" class="btn btn--primary btn--white">Products <svg class="btn__chevron" width="13"
                 height="12" viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7.49 6L7.5 6" />
                 <path d="M2.5 1L7.95455 6L2.5 11" />
@@ -732,7 +732,7 @@
           </p>
           <h2 class="income__heading">PLUG & PLAY<br><span class="income__passive">PASSIVE INCOME</span></h2>
         </div>
-        <a href="contact" onmousedown="plugInMobile()" onmouseenter="plugIn()" onmouseleave="plugOut()"
+        <a href="minipod" onmousedown="plugInMobile()" onmouseenter="plugIn()" onmouseleave="plugOut()"
           class="income__btn btn btn--primary">Get Started
           <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
             xmlns="http://www.w3.org/2000/svg">
