--- a/minipod.html
+++ b/minipod.html
@@ -604,6 +604,29 @@
               </div>
             </div>
           </div>
+
+          <div class="minipod__set minipod__set-10 gap--lg ai-end jc-c">
+            <img class="minipod__set-img" src="images/illustrations/minipod-10set.svg"
+              alt="Minipod 10 Unit Set Illustration">
+            <div class="minipod__set-text flex flex-col gap--sm ai-c">
+              <h4>10 Unit Set</h4>
+              <div class="card-9 minipod__set-detail flex ai-c gap--md">
+                <img class="icon--sm" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
+                <h6 class="minipod__set-heading">Total Capacity</h6>
+                <h6 class="text--blue">3MW</h6>
+              </div>
+              <div class="card-9 minipod__set-detail flex ai-c gap--md">
+                <img class="icon--sm" src="images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
+                <h6 class="minipod__set-heading">Switch Gear</h6>
+                <h6 class="text--blue">Included</h6>
+              </div>
+              <div class="card-9 minipod__set-detail flex ai-c gap--md">
+                <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
+                <h6 class="minipod__set-heading">Approx. Cost</h6>
+                <h6 class="text--blue">$386,500 - 448,999</h6>
+              </div>
+            </div>
+          </div>
         </div>
         <a href="contact" class="btn btn--primary mtop--xxl mbot--lg">Contact Sales
           <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
