added interaction on scroll-to text

--- a/minipod.html
+++ b/minipod.html
@@ -164,13 +164,13 @@
     </div>
   </nav>
 
-  <div class="scroll scroll__product">
+  <a href="#specifications" class="scroll scroll__product">
     <span class="scroll__text">scroll for more</span>
     <svg class="scroll__arrow" width="13" height="12" viewBox="0 0 13 12" fill="none"
       xmlns="http://www.w3.org/2000/svg">
       <path d="M2.5 1L7.95455 6L2.5 11" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
     </svg>
-  </div>
+  </a>
 
   <main class="main">
 
