--- a/index.html
+++ b/index.html
@@ -337,15 +337,16 @@
         </div>
       </div>
       </div>
-      <div class="scroll scroll__home">
+      <a href="#minipod" class="scroll scroll__home">
         <span class="scroll__text">scroll for more</span>
         <svg class="scroll__arrow" width="13" height="12" viewBox="0 0 13 12" fill="none"
           xmlns="http://www.w3.org/2000/svg">
           <path d="M2.5 1L7.95455 6L2.5 11" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
         </svg>
+      </a>
     </section>
 
-    <section class="minipod">
+    <section id="minipod" class="minipod">
       <div class="container flex flex-col gap--sm">
         <div class="flex ai-c gap--md">
           <img class="icon--lg" src="images/icons/icon_logo.svg" alt="Logo Icon">
