--- a/minipod.html
+++ b/minipod.html
@@ -37,11 +37,15 @@
       rel="stylesheet">
   </noscript>
 
+  <!-- GSAP -->
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+
   <!-- Javascript -->
   <script defer src="/app/js/home.js"></script>
   <script defer src="/app/js/detect-scroll.js"></script>
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
+  <script defer src="/app/js/sparkles.js"></script>
 
   <title>Digital Shovel • Minipod</title>
 
@@ -508,7 +512,7 @@
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
-                <h6 class="text--blue">$39,999 - $45,500</h6>
+                <h6 class="text--blue text--strikethrough">$39,999 - $45,500</h6>
               </div>
             </div>
           </div>
@@ -531,7 +535,34 @@
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
-                <h6 class="text--blue">$113,997 - $130,500</h6>
+                <h6 class="text--blue text--strikethrough">$113,997 - $130,500</h6>
+              </div>
+              <div class="card-9 card-9--deal minipod__set-detail flex ai-c gap--md">
+                <img class="icon--sm" src="images/icons/icon_bear-market.svg" alt="Bear Market Icon">
+                <div class="sparkle-container">
+                  <svg width="16" height="16" viewBox="0 0 184 184" fill="none" class="sparkle sparkle-1">
+                    <path
+                      d="M92 0C92 0 96 63.4731 108.263 75.7365C120.527 88 184 92 184 92C184 92 118.527 98 108.263 108.263C98 118.527 92 184 92 184C92 184 86.4731 119 75.7365 108.263C65 97.5269 0 92 0 92C0 92 63.9731 87.5 75.7365 75.7365C87.5 63.9731 92 0 92 0Z"
+                      fill="#FFC700"></path>
+                  </svg>
+                  <svg width="16" height="16" viewBox="0 0 184 184" fill="none" class="sparkle sparkle-2">
+                    <path
+                      d="M92 0C92 0 96 63.4731 108.263 75.7365C120.527 88 184 92 184 92C184 92 118.527 98 108.263 108.263C98 118.527 92 184 92 184C92 184 86.4731 119 75.7365 108.263C65 97.5269 0 92 0 92C0 92 63.9731 87.5 75.7365 75.7365C87.5 63.9731 92 0 92 0Z"
+                      fill="#FFC700"></path>
+                  </svg>
+                  <svg width="16" height="16" viewBox="0 0 184 184" fill="none" class="sparkle sparkle-3">
+                    <path
+                      d="M92 0C92 0 96 63.4731 108.263 75.7365C120.527 88 184 92 184 92C184 92 118.527 98 108.263 108.263C98 118.527 92 184 92 184C92 184 86.4731 119 75.7365 108.263C65 97.5269 0 92 0 92C0 92 63.9731 87.5 75.7365 75.7365C87.5 63.9731 92 0 92 0Z"
+                      fill="#FFC700"></path>
+                  </svg>
+                  <svg width="16" height="16" viewBox="0 0 184 184" fill="none" class="sparkle sparkle-4">
+                    <path
+                      d="M92 0C92 0 96 63.4731 108.263 75.7365C120.527 88 184 92 184 92C184 92 118.527 98 108.263 108.263C98 118.527 92 184 92 184C92 184 86.4731 119 75.7365 108.263C65 97.5269 0 92 0 92C0 92 63.9731 87.5 75.7365 75.7365C87.5 63.9731 92 0 92 0Z"
+                      fill="#FFC700"></path>
+                  </svg>
+                </div>
+                <h6 class="minipod__set-heading">Bear Market Promo</h6>
+                <h6 class="text--red text--emphasis">$99,997</h6>
               </div>
             </div>
           </div>
@@ -554,7 +585,34 @@
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
-                <h6 class="text--blue">$167,500 - 190,899</h6>
+                <h6 class="text--blue text--strikethrough">$167,500 - 190,899</h6>
+              </div>
+              <div class="card-9 card-9--deal minipod__set-detail flex ai-c gap--md">
+                <img class="icon--sm" src="images/icons/icon_bear-market.svg" alt="Bear Market Icon">
+                <div class="sparkle-container">
+                  <svg width="16" height="16" viewBox="0 0 184 184" fill="none" class="sparkle sparkle-1">
+                    <path
+                      d="M92 0C92 0 96 63.4731 108.263 75.7365C120.527 88 184 92 184 92C184 92 118.527 98 108.263 108.263C98 118.527 92 184 92 184C92 184 86.4731 119 75.7365 108.263C65 97.5269 0 92 0 92C0 92 63.9731 87.5 75.7365 75.7365C87.5 63.9731 92 0 92 0Z"
+                      fill="#FFC700"></path>
+                  </svg>
+                  <svg width="16" height="16" viewBox="0 0 184 184" fill="none" class="sparkle sparkle-2">
+                    <path
+                      d="M92 0C92 0 96 63.4731 108.263 75.7365C120.527 88 184 92 184 92C184 92 118.527 98 108.263 108.263C98 118.527 92 184 92 184C92 184 86.4731 119 75.7365 108.263C65 97.5269 0 92 0 92C0 92 63.9731 87.5 75.7365 75.7365C87.5 63.9731 92 0 92 0Z"
+                      fill="#FFC700"></path>
+                  </svg>
+                  <svg width="16" height="16" viewBox="0 0 184 184" fill="none" class="sparkle sparkle-3">
+                    <path
+                      d="M92 0C92 0 96 63.4731 108.263 75.7365C120.527 88 184 92 184 92C184 92 118.527 98 108.263 108.263C98 118.527 92 184 92 184C92 184 86.4731 119 75.7365 108.263C65 97.5269 0 92 0 92C0 92 63.9731 87.5 75.7365 75.7365C87.5 63.9731 92 0 92 0Z"
+                      fill="#FFC700"></path>
+                  </svg>
+                  <svg width="16" height="16" viewBox="0 0 184 184" fill="none" class="sparkle sparkle-4">
+                    <path
+                      d="M92 0C92 0 96 63.4731 108.263 75.7365C120.527 88 184 92 184 92C184 92 118.527 98 108.263 108.263C98 118.527 92 184 92 184C92 184 86.4731 119 75.7365 108.263C65 97.5269 0 92 0 92C0 92 63.9731 87.5 75.7365 75.7365C87.5 63.9731 92 0 92 0Z"
+                      fill="#FFC700"></path>
+                  </svg>
+                </div>
+                <h6 class="minipod__set-heading">Bear Market Promo</h6>
+                <h6 class="text--red text--emphasis">$153,600</h6>
               </div>
             </div>
           </div>
@@ -577,7 +635,34 @@
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
-                <h6 class="text--blue">$250,500 - 291,999</h6>
+                <h6 class="text--blue text--strikethrough">$250,500 - 291,999</h6>
+              </div>
+              <div class="card-9 card-9--deal minipod__set-detail flex ai-c gap--md">
+                <img class="icon--sm" src="images/icons/icon_bear-market.svg" alt="Bear Market Icon">
+                <div class="sparkle-container">
+                  <svg width="16" height="16" viewBox="0 0 184 184" fill="none" class="sparkle sparkle-1">
+                    <path
+                      d="M92 0C92 0 96 63.4731 108.263 75.7365C120.527 88 184 92 184 92C184 92 118.527 98 108.263 108.263C98 118.527 92 184 92 184C92 184 86.4731 119 75.7365 108.263C65 97.5269 0 92 0 92C0 92 63.9731 87.5 75.7365 75.7365C87.5 63.9731 92 0 92 0Z"
+                      fill="#FFC700"></path>
+                  </svg>
+                  <svg width="16" height="16" viewBox="0 0 184 184" fill="none" class="sparkle sparkle-2">
+                    <path
+                      d="M92 0C92 0 96 63.4731 108.263 75.7365C120.527 88 184 92 184 92C184 92 118.527 98 108.263 108.263C98 118.527 92 184 92 184C92 184 86.4731 119 75.7365 108.263C65 97.5269 0 92 0 92C0 92 63.9731 87.5 75.7365 75.7365C87.5 63.9731 92 0 92 0Z"
+                      fill="#FFC700"></path>
+                  </svg>
+                  <svg width="16" height="16" viewBox="0 0 184 184" fill="none" class="sparkle sparkle-3">
+                    <path
+                      d="M92 0C92 0 96 63.4731 108.263 75.7365C120.527 88 184 92 184 92C184 92 118.527 98 108.263 108.263C98 118.527 92 184 92 184C92 184 86.4731 119 75.7365 108.263C65 97.5269 0 92 0 92C0 92 63.9731 87.5 75.7365 75.7365C87.5 63.9731 92 0 92 0Z"
+                      fill="#FFC700"></path>
+                  </svg>
+                  <svg width="16" height="16" viewBox="0 0 184 184" fill="none" class="sparkle sparkle-4">
+                    <path
+                      d="M92 0C92 0 96 63.4731 108.263 75.7365C120.527 88 184 92 184 92C184 92 118.527 98 108.263 108.263C98 118.527 92 184 92 184C92 184 86.4731 119 75.7365 108.263C65 97.5269 0 92 0 92C0 92 63.9731 87.5 75.7365 75.7365C87.5 63.9731 92 0 92 0Z"
+                      fill="#FFC700"></path>
+                  </svg>
+                </div>
+                <h6 class="minipod__set-heading">Bear Market Promo</h6>
+                <h6 class="text--red text--emphasis">$225,000</h6>
               </div>
             </div>
           </div>
@@ -600,7 +685,34 @@
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
-                <h6 class="text--blue">$310,500 - 356,999</h6>
+                <h6 class="text--blue text--strikethrough">$310,500 - 356,999</h6>
+              </div>
+              <div class="card-9 card-9--deal minipod__set-detail flex ai-c gap--md">
+                <img class="icon--sm" src="images/icons/icon_bear-market.svg" alt="Bear Market Icon">
+                <div class="sparkle-container">
+                  <svg width="16" height="16" viewBox="0 0 184 184" fill="none" class="sparkle sparkle-1">
+                    <path
+                      d="M92 0C92 0 96 63.4731 108.263 75.7365C120.527 88 184 92 184 92C184 92 118.527 98 108.263 108.263C98 118.527 92 184 92 184C92 184 86.4731 119 75.7365 108.263C65 97.5269 0 92 0 92C0 92 63.9731 87.5 75.7365 75.7365C87.5 63.9731 92 0 92 0Z"
+                      fill="#FFC700"></path>
+                  </svg>
+                  <svg width="16" height="16" viewBox="0 0 184 184" fill="none" class="sparkle sparkle-2">
+                    <path
+                      d="M92 0C92 0 96 63.4731 108.263 75.7365C120.527 88 184 92 184 92C184 92 118.527 98 108.263 108.263C98 118.527 92 184 92 184C92 184 86.4731 119 75.7365 108.263C65 97.5269 0 92 0 92C0 92 63.9731 87.5 75.7365 75.7365C87.5 63.9731 92 0 92 0Z"
+                      fill="#FFC700"></path>
+                  </svg>
+                  <svg width="16" height="16" viewBox="0 0 184 184" fill="none" class="sparkle sparkle-3">
+                    <path
+                      d="M92 0C92 0 96 63.4731 108.263 75.7365C120.527 88 184 92 184 92C184 92 118.527 98 108.263 108.263C98 118.527 92 184 92 184C92 184 86.4731 119 75.7365 108.263C65 97.5269 0 92 0 92C0 92 63.9731 87.5 75.7365 75.7365C87.5 63.9731 92 0 92 0Z"
+                      fill="#FFC700"></path>
+                  </svg>
+                  <svg width="16" height="16" viewBox="0 0 184 184" fill="none" class="sparkle sparkle-4">
+                    <path
+                      d="M92 0C92 0 96 63.4731 108.263 75.7365C120.527 88 184 92 184 92C184 92 118.527 98 108.263 108.263C98 118.527 92 184 92 184C92 184 86.4731 119 75.7365 108.263C65 97.5269 0 92 0 92C0 92 63.9731 87.5 75.7365 75.7365C87.5 63.9731 92 0 92 0Z"
+                      fill="#FFC700"></path>
+                  </svg>
+                </div>
+                <h6 class="minipod__set-heading">Bear Market Promo</h6>
+                <h6 class="text--red text--emphasis">$259,200</h6>
               </div>
             </div>
           </div>
@@ -623,7 +735,7 @@
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
-                <h6 class="text--blue">$386,500 - 448,999</h6>
+                <h6 class="text--blue text--strikethrough">$386,500 - 448,999</h6>
               </div>
             </div>
           </div>
