--- a/minipod.html
+++ b/minipod.html
@@ -537,11 +537,11 @@
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
                 <h6 class="text--blue text--strikethrough">$113,997 - $130,500</h6>
               </div>
-              <div class="card-9 card-9--deal minipod__set-detail flex ai-c gap--md">
+              <a class="card-9 card-9--deal minipod__set-detail flex ai-c gap--md" href="contact">
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon">
                 <h6 class="minipod__set-heading">Bear Market Promo</h6>
                 <h6 class="text--red text--emphasis text--larger">$99,997</h6>
-              </div>
+              </a>
             </div>
           </div>
 
