--- a/minipod.html
+++ b/minipod.html
@@ -509,11 +509,11 @@
                 <h6 class="minipod__set-heading">Switch Gear</h6>
                 <h6 class="text--blue">4 Set or higher</h6>
               </div>
-              <div class="card-9 minipod__set-detail flex ai-c gap--md">
+              <a class="card-9 minipod__set-detail flex ai-c gap--md" href="contact">
                 <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
                 <h6 class="text--blue">$39,999 - $45,500</h6>
-              </div>
+              </a>
             </div>
           </div>
 
@@ -565,11 +565,11 @@
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
                 <h6 class="text--blue text--strikethrough">$167,500 - 190,899</h6>
               </div>
-              <div class="card-9 card-9--deal minipod__set-detail flex ai-c gap--md">
+              <a class="card-9 card-9--deal minipod__set-detail flex ai-c gap--md" href="contact">
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon">
                 <h6 class="minipod__set-heading">Bear Market Promo</h6>
                 <h6 class="text--red text--emphasis text--larger">$153,600</h6>
-              </div>
+              </a>
             </div>
           </div>
 
@@ -593,11 +593,11 @@
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
                 <h6 class="text--blue text--strikethrough">$250,500 - 291,999</h6>
               </div>
-              <div class="card-9 card-9--deal minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon">
+              <a class="card-9 card-9--deal minipod__set-detail flex ai-c gap--md" href="contact">
+                <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon" href="contact">
                 <h6 class="minipod__set-heading">Bear Market Promo</h6>
                 <h6 class="text--red text--emphasis text--larger">$225,000</h6>
-              </div>
+              </a>
             </div>
           </div>
 
@@ -621,11 +621,11 @@
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
                 <h6 class="text--blue text--strikethrough">$310,500 - 356,999</h6>
               </div>
-              <div class="card-9 card-9--deal minipod__set-detail flex ai-c gap--md">
+              <a class="card-9 card-9--deal minipod__set-detail flex ai-c gap--md" href="contact">
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon">
                 <h6 class="minipod__set-heading">Bear Market Promo</h6>
                 <h6 class="text--red text--emphasis text--larger">$259,200</h6>
-              </div>
+              </a>
             </div>
           </div>
 
@@ -644,11 +644,11 @@
                 <h6 class="minipod__set-heading">Switch Gear</h6>
                 <h6 class="text--blue">Included</h6>
               </div>
-              <div class="card-9 minipod__set-detail flex ai-c gap--md">
+              <a class="card-9 minipod__set-detail flex ai-c gap--md" href="contact">
                 <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
                 <h6 class="text--blue">$386,500 - 448,999</h6>
-              </div>
+              </a>
             </div>
           </div>
         </div>
