added bear market promo popup and hidden turnkey solutions

--- a/minipod.html
+++ b/minipod.html
@@ -45,7 +45,6 @@
   <script defer src="/app/js/detect-scroll.js"></script>
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
-  <script defer src="/app/js/sparkles.js"></script>
 
   <title>Digital Shovel • Minipod</title>
 
@@ -136,9 +135,9 @@
           </div>
         </li>
 
-        <li>
+        <!-- <li>
           <a class="navbar__link" href="turnkey-solutions">Turn-Key Solutions</a>
-        </li>
+        </li> -->
         <li>
           <a class="navbar__link" href="contact">Contact Us</a>
         </li>
@@ -517,7 +516,7 @@
             </div>
           </div>
 
-          <div class="minipod__set gap--lg ai-end jc-c">
+          <div class="minipod__set minipod__set-3 gap--lg ai-end jc-c">
             <img class="minipod__set-img" src="images/illustrations/minipod-3set.svg"
               alt="Minipod 3 Unit Set Illustration">
             <div class="minipod__set-text flex flex-col gap--sm ai-c">
@@ -541,11 +540,14 @@
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon">
                 <h6 class="minipod__set-heading">Bear Market Promo</h6>
                 <h6 class="text--red text--emphasis text--larger">$99,997</h6>
+                <div class="card-9--popup">
+                  <h6>Further discounts on high volume pricing</h6>
+                </div>
               </a>
             </div>
           </div>
 
-          <div class="minipod__set gap--lg ai-end jc-c">
+          <div class="minipod__set minipod__set-4 gap--lg ai-end jc-c">
             <img class="minipod__set-img" src="images/illustrations/minipod-4set.svg"
               alt="Minipod 4 Unit Set Illustration">
             <div class="minipod__set-text flex flex-col gap--sm ai-c">
@@ -569,6 +571,9 @@
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon">
                 <h6 class="minipod__set-heading">Bear Market Promo</h6>
                 <h6 class="text--red text--emphasis text--larger">$153,600</h6>
+                <div class="card-9--popup">
+                  <h6>Further discounts on high volume pricing</h6>
+                </div>
               </a>
             </div>
           </div>
@@ -597,6 +602,9 @@
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon" href="contact">
                 <h6 class="minipod__set-heading">Bear Market Promo</h6>
                 <h6 class="text--red text--emphasis text--larger">$225,000</h6>
+                <div class="card-9--popup">
+                  <h6>Further discounts on high volume pricing</h6>
+                </div>
               </a>
             </div>
           </div>
@@ -625,6 +633,9 @@
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon">
                 <h6 class="minipod__set-heading">Bear Market Promo</h6>
                 <h6 class="text--red text--emphasis text--larger">$259,200</h6>
+                <div class="card-9--popup">
+                  <h6>Further discounts on high volume pricing</h6>
+                </div>
               </a>
             </div>
           </div>
@@ -648,6 +659,9 @@
                 <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
                 <h6 class="text--blue">$386,500 - 448,999</h6>
+                <div class="card-9--popup">
+                  <h6>Further discounts on high volume pricing</h6>
+                </div>
               </a>
             </div>
           </div>
