--- a/minipod.html
+++ b/minipod.html
@@ -508,10 +508,18 @@
                 <h6 class="minipod__set-heading">Switch Gear</h6>
                 <h6 class="text--blue">4 Set or higher</h6>
               </div>
-              <a class="card-9 minipod__set-detail flex ai-c gap--md" href="contact">
+              <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
                 <h6 class="text--blue">$39,999 - $45,500</h6>
+              </div>
+              <a class="card-9 card-9--deal minipod__set-detail flex ai-c gap--md" href="contact">
+                <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon">
+                <h6 class="minipod__set-heading">Bear Market Promo</h6>
+                <h6 class="text--red text--emphasis text--larger">$29,997</h6>
+                <div class="card-9--popup">
+                  <h6>Further discounts on high volume pricing</h6>
+                </div>
               </a>
             </div>
           </div>
@@ -539,7 +547,7 @@
               <a class="card-9 card-9--deal minipod__set-detail flex ai-c gap--md" href="contact">
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon">
                 <h6 class="minipod__set-heading">Bear Market Promo</h6>
-                <h6 class="text--red text--emphasis text--larger">$99,997</h6>
+                <h6 class="text--red text--emphasis text--larger">$86,997</h6>
                 <div class="card-9--popup">
                   <h6>Further discounts on high volume pricing</h6>
                 </div>
@@ -570,7 +578,7 @@
               <a class="card-9 card-9--deal minipod__set-detail flex ai-c gap--md" href="contact">
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon">
                 <h6 class="minipod__set-heading">Bear Market Promo</h6>
-                <h6 class="text--red text--emphasis text--larger">$153,600</h6>
+                <h6 class="text--red text--emphasis text--larger">$139,997</h6>
                 <div class="card-9--popup">
                   <h6>Further discounts on high volume pricing</h6>
                 </div>
@@ -601,7 +609,7 @@
               <a class="card-9 card-9--deal minipod__set-detail flex ai-c gap--md" href="contact">
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon" href="contact">
                 <h6 class="minipod__set-heading">Bear Market Promo</h6>
-                <h6 class="text--red text--emphasis text--larger">$225,000</h6>
+                <h6 class="text--red text--emphasis text--larger">$189,997</h6>
                 <div class="card-9--popup">
                   <h6>Further discounts on high volume pricing</h6>
                 </div>
@@ -632,7 +640,7 @@
               <a class="card-9 card-9--deal minipod__set-detail flex ai-c gap--md" href="contact">
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon">
                 <h6 class="minipod__set-heading">Bear Market Promo</h6>
-                <h6 class="text--red text--emphasis text--larger">$259,200</h6>
+                <h6 class="text--red text--emphasis text--larger">$233,997</h6>
                 <div class="card-9--popup">
                   <h6>Further discounts on high volume pricing</h6>
                 </div>
@@ -655,10 +663,15 @@
                 <h6 class="minipod__set-heading">Switch Gear</h6>
                 <h6 class="text--blue">Included</h6>
               </div>
-              <a class="card-9 minipod__set-detail flex ai-c gap--md" href="contact">
+              <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
                 <h6 class="text--blue">$386,500 - 448,999</h6>
+              </div>
+              <a class="card-9 card-9--deal minipod__set-detail flex ai-c gap--md" href="contact">
+                <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon">
+                <h6 class="minipod__set-heading">Bear Market Promo</h6>
+                <h6 class="text--red text--emphasis text--larger">$274,997</h6>
                 <div class="card-9--popup">
                   <h6>Further discounts on high volume pricing</h6>
                 </div>
