added strikethrough to missing prices

--- a/minipod.html
+++ b/minipod.html
@@ -511,7 +511,7 @@
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
-                <h6 class="text--blue">$39,999 - $45,500</h6>
+                <h6 class="text--blue text--strikethrough">$39,999 - $45,500</h6>
               </div>
               <a class="card-9 card-9--deal minipod__set-detail flex ai-c gap--md" href="contact">
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon">
@@ -666,7 +666,7 @@
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
-                <h6 class="text--blue">$386,500 - 448,999</h6>
+                <h6 class="text--blue text--strikethrough">$386,500 - 448,999</h6>
               </div>
               <a class="card-9 card-9--deal minipod__set-detail flex ai-c gap--md" href="contact">
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon">
