--- a/turnkey-solutions.html
+++ b/turnkey-solutions.html
@@ -205,41 +205,35 @@
     </section>
 
     <section class="turnkey__grid">
-      <div class="turnkey__grid-item">
+      <div class="turnkey__grid-item turnkey__grid-item-1">
         <img src="images/icons/icon_land-lease_v2.svg" alt="Land Lease Icon">
         <h5>Land Lease</h5>
-        <p>Lorem ipsum dolor sit amet consectetur. Tempus dignissim feugiat tortor aliquet. Ac porta interdum vitae
-          scelerisque nunc morbi.</p>
+        <p>2-year lease with flat take-or-pay power contract inclusive. Fully prepped site with pad or piles designed
+          specifically for the Digital Shovel Minipods.</p>
       </div>
-      <div class="turnkey__grid-item">
+      <div class="turnkey__grid-item turnkey__grid-item-2">
         <img src="images/icons/icon_transformer-hookup_v2.svg" alt="Transformer Hookup Icon">
         <h5>Transformer Hookup</h5>
-        <p>Lorem ipsum dolor sit amet consectetur. Tempus dignissim feugiat tortor aliquet. Ac porta interdum vitae
-          scelerisque nunc morbi.</p>
+        <p>Included in this offering is the hook-up of our medium voltage transformer to the low voltage switchgear
+          that
+          will feed the Minipods.</p>
       </div>
-      <div class="turnkey__grid-item">
-        <img src="images/icons/icon_pad.svg" alt="Pad Icon">
-        <h5>Pad</h5>
-        <p>Lorem ipsum dolor sit amet consectetur. Tempus dignissim feugiat tortor aliquet. Ac porta interdum vitae
-          scelerisque nunc morbi.</p>
-      </div>
-      <div class="turnkey__grid-item">
+      <div class="turnkey__grid-item turnkey__grid-item-3">
         <img src="images/icons/icon_pod.svg" alt="Minipod Icon">
         <h5>300kW Pod</h5>
-        <p>Lorem ipsum dolor sit amet consectetur. Tempus dignissim feugiat tortor aliquet. Ac porta interdum vitae
-          scelerisque nunc morbi.</p>
+        <p>Contracts can be purchased in 300kW increments using our Minipod line. You must take an entire pod and will
+          have VPN access to both the pod's miners, as well as the SmartPDU. At the end of the contract, YOU own the
+          Minipod.</p>
       </div>
-      <div class="turnkey__grid-item">
+      <div class="turnkey__grid-item turnkey__grid-item-4">
         <img src="images/icons/icon_forklift.svg" alt="Forklift Icon">
         <h5>Deployment</h5>
-        <p>Lorem ipsum dolor sit amet consectetur. Tempus dignissim feugiat tortor aliquet. Ac porta interdum vitae
-          scelerisque nunc morbi.</p>
+        <p>Deployment, configuration, and setup of your miners is included in the cost of this contract.</p>
       </div>
-      <div class="turnkey__grid-item">
+      <div class="turnkey__grid-item turnkey__grid-item-5">
         <img src="images/icons/icon_truck.svg" alt="Truck Icon">
         <h5>Delivery</h5>
-        <p>Lorem ipsum dolor sit amet consectetur. Tempus dignissim feugiat tortor aliquet. Ac porta interdum vitae
-          scelerisque nunc morbi.</p>
+        <p>Transportation of the pod to the mining farm is included in the cost of this contract.</p>
       </div>
     </section>
 
@@ -253,7 +247,7 @@
       <h2>+</h2>
       <div class="flex flex-col">
         <h5>Pod Deposit</h5>
-        <h2 class="flex ai-end gap--sm">$23k
+        <h2 class="flex ai-end gap--sm">$10k
           <span class="flex flex-col gap--sm">
             <small class="text--emphasis text--blue">+$2300/m</small>
             <small class="text--dark-blue">for 12 months</small>
