styling update for navbar and subnav

--- a/minipod.html
+++ b/minipod.html
@@ -23,7 +23,7 @@
 
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="../dist/style.min.css?v=1.4">
+  <link rel="stylesheet" href="../dist/style.min.css?v=1.5">
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
@@ -73,7 +73,7 @@
       units available in Canada ready to be shipped</span>
   </div>
 
-  <nav class="navbar">
+  <nav class="navbar navbar--borderless">
     <div class="navbar__container">
       <a href="/" class="navbar__logo" aria-label="Digital Shovel Logo">
         <svg title="Digital Shovel Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 249.45 80.96">
@@ -151,15 +151,12 @@
         <li>
           <a class="subnav__link subnav__link--product subnav__link--active" href="#product">Product</a>
         </li>
-        <li class="subnav__divider">|</li>
         <li>
           <a class="subnav__link subnav__link--specs" href="#specifications">Specifications</a>
         </li>
-        <li class="subnav__divider">|</li>
         <li>
           <a class="subnav__link subnav__link--bundle" href="#bundle">Bundle</a>
         </li>
-        <li class="subnav__divider">|</li>
         <li>
           <a class="subnav__link subnav__link--pricing" href="#pricing">Pricing</a>
         </li>
