minor fixes to icon sizes

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
     <section id="minipod" class="minipod">
       <div class="container flex flex-col gap--sm">
         <div class="flex ai-c gap--md">
-          <img class="icon--lg" src="images/icons/icon_logo.svg" alt="Logo Icon">
+          <img class="icon--lg icon--full-height" src="images/icons/icon_logo.svg" alt="Logo Icon">
           <h2 class="minipod__heading flex flex-col">M300 <span class="text--emphasis text--blue">Minipod</span></h2>
         </div>
         <p class="minipod__body">
